tests/negative/test_block_non_eval_eval_loop.orb
fnc main () () {
    block {
        eval (loop false);
    };
};